Resolved a bunch of deprecation.